@@ -17,6 +17,7 @@
 <li><a class="reference" href="#match-parse-extensions-for-slicing-and-dicing-variables-with-regexps" id="id2" name="id2">match_parse -- extensions for slicing and dicing variables with regexps</a></li>
 <li><a class="reference" href="#require-assert-that-specific-conditions-hold-after-each-page-is-loaded" id="id3" name="id3">require -- assert that specific conditions hold after each page is loaded</a></li>
 <li><a class="reference" href="#mailman-sf-discard-spam-messages-from-your-sourceforge-mailing-lists" id="id4" name="id4">mailman_sf -- discard spam messages from your SourceForge mailing lists</a></li>
+<li><a class="reference" href="#argparse" id="id5" name="id5">argparse</a></li>
 </ul>
 </div>
 <p>Several different extension modules are distributed with twill, under
@@ -122,6 +123,17 @@ exit_if_empty
 # if not empty, discard all messages &amp; submit
 discard_all_messages
 submit 0
+</pre>
+</div>
+<div class="section" id="argparse">
+<h1><a class="toc-backref" href="#id5" name="argparse">argparse</a></h1>
+<p>The 'argparse' extension module contains one function, 'get_args'.  'get_args'
+loads all of the command-line arguments into variables, e.g.</p>
+<pre class="literal-block">
+% ./twill-sh script1 script2 script3
+...
+&gt;&gt; extend_with argparse
+&gt;&gt; echo $arg1
 </pre>
 </div>
 </div>
